--- a/src/app/loans/loans.component.html
+++ b/src/app/loans/loans.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 <section>
 <div class="container">
+  <button type="button" class="btn btn-indigo btn-m m-0" id="excelExport" (click)="export()">Export all data to Excel</button>
 <h2>Open Applications</h2>
+
 
   <table id="allLoansTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
     <thead>
